// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableViews TableStatusbar displays no statusBarMessage 1`] = `
<div>
  <div
    class="styled__StyledStatsBar-sc-1dtvgs1-32 hNrxzW"
  >
    <div
      class="Ellipsis-sc-1dn9bou-0 gzqRPC"
    />
  </div>
</div>
`;

exports[`TableViews TableStatusbar displays statusBarMessage 1`] = `
<div>
  <div
    class="styled__StyledStatsBar-sc-1dtvgs1-32 hNrxzW"
  >
    <div
      class="Ellipsis-sc-1dn9bou-0 gzqRPC"
    >
      Started streaming 1 records after 5 ms and completed after 10  ms.
    </div>
  </div>
</div>
`;

exports[`TableViews TableView displays bodyMessage if no rows 1`] = `
<div>
  <div
    class="styled__PaddedDiv-sc-1dtvgs1-6 styled__PaddedTableViewDiv-sc-1dtvgs1-7 iNSchp"
  >
    <div
      class="styled__StyledBodyMessage-sc-1dtvgs1-35 hfUgGP"
    >
      (no changes, no records)
    </div>
  </div>
</div>
`;

exports[`TableViews TableView does not display bodyMessage if rows 1`] = `
<div>
  <div
    class="styled__PaddedDiv-sc-1dtvgs1-6 styled__PaddedTableViewDiv-sc-1dtvgs1-7 iNSchp"
  >
    <table
      class="DataTables__StyledTable-bf850j-0 cZayOW"
    >
      <thead>
        <tr>
          <th
            class="table-header DataTables__StyledTh-bf850j-2 gjWFrA"
          >
            x
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="table-row DataTables__StyledBodyTr-bf850j-1 iGjwRr"
        >
          <td
            class="table-properties DataTables__StyledTd-bf850j-3 jDsjVi"
          >
            "y"
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`TableViews TableView renderObject handles null values 1`] = `
<ForwardRef>
  {
  "x": 1.0
}
</ForwardRef>
`;

exports[`TableViews TableView renderObject handles null values 2`] = `
<em>
  null
</em>
`;
